compiler/lume_lsp/src/engine/test/snapshots/lume_lsp__engine__test__hover__hover_function_definition.snap
---
source: compiler/lume_lsp/src/engine/test/hover.rs
assertion_line: 24
expression: hover.contents
---
Markup(
    MarkupContent {
        kind: Markdown,
        value: "```lm\npriv fn main() -> Void\n```\n",
    },
)
