compiler/lume_lsp/src/engine/test/snapshots/lume_lsp__engine__test__hover__hover_variable_declaration.snap
---
source: compiler/lume_lsp/src/engine/test/hover.rs
assertion_line: 53
expression: hover.contents
---
Markup(
    MarkupContent {
        kind: Markdown,
        value: "```lm\nlet a: std::Int32;\n```",
    },
)
